# electronic-pet

./: .gitignore  AGENTS.md  CMakeLists.txt  GIT_TEAM_GUIDE.md  IDENTITY.md  LICENSE  PROJECT_DRAW.md  README.md  SESSION_MAPPING.md  SOUL.md  USER.md  acceptance_report_template.md  build.ps1  run_tests.ps1  setup-git-identity.ps1  test_cases.md  test_plan.md  test_plan_qa.md
.github/: CICD_GUIDE.md
.github/workflows/: ci-cd.yml
.openclaw/: workspace-state.json
PetEdu/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
PetEdu/src/: main.cpp
PetEdu/src/core/: pet.h
PetEdu/src/ui/: mainwindow.h
PetEduComplete/: CMakeLists.txt  QUICKSTART.md  README.md  build.bat  petedu.py  resources.qrc  发布说明.md  启动 PetEdu.bat
PetEduComplete/src/: main.cpp
PetEduComplete/src/core/: exchangesystem.cpp  pet.h
PetEduComplete/src/ui/: studentview.cpp  teacherpanel.cpp
PetEduComplete/styles/: dark_theme.qss
pet-core/: CMakeLists.txt  README.md  datamanager.h  pet.cpp
pet-core/cmake/: pet_core-config.cmake.in
pet-core/gdsii/: README.md  gdsii_parser.h
pet-core/include/: exchangesystem.h  pointsystem.h
pet-core/include/gdsii/: gdsii_parser.h  gdsii_types.h
pet-core/src/: datamanager.cpp  pointsystem.cpp
pet-core/src/gdsii/: gdsii_parser.cpp
pet-core/tests/: CMakeLists.txt
pet-core/tests/integration/: CMakeLists.txt  module_interface_test.cpp
pet-core/tests/unit/: CMakeLists.txt  core_module_test.cpp  gdsii_parser_test.cpp
ui/pet-desktop/: CMakeLists.txt  QUICKSTART.md  README.md  exchangedialog.cpp  exchangedialog.h  mainwindow.cpp  mainwindow.h  resources.qrc  studentview.h  teacherpanel.h
ui/pet-desktop/images/: README.md
ui/pet-desktop/tests/: CMakeLists.txt  ui_component_test.cpp
